# xmpp-addr

./: .build.yml  .gitignore  Cargo.toml  LICENSE-MIT  README.md  bitbucket-pipelines.yml
.builds/: dco.yml  sync.yml
.github/workflows/: pr.yml
benches/: bench.rs
src/: jid.rs  lib.rs
tests/: jid.rs
