[package]
name = "xmpp-jid"
# Remember to bump html_root_url in src/lib.rs as well.
version = "0.6.0"
authors = ["Sam Whited <sam@samwhited.com>"]
license = "MIT/Apache-2.0"
description = """
This crate has been moved to [xmpp-addr].

[xmpp-addr]: https://crates.io/crates/xmpp-addr
"""
repository = "https://bitbucket.org/mellium/xmpp-addr/"
readme = "README.md"

exclude = [
    "bitbucket-pipelines.yml",
]

[features]
default = ["stable", "serde"]

# Use only stable APIs (eg. don't build with TryFrom)
stable = []

[dependencies]
idna = "0.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
