[package]
name = "xmpp-addr"
# Remember to bump html_root_url in src/lib.rs as well.
version = "0.8.0"
authors = ["Sam Whited <sam@samwhited.com>"]
license = "MIT/Apache-2.0"
description = """
An implementation of the XMPP Address format (Jabber ID) defined in RFC 7622.
"""
repository = "https://bitbucket.org/mellium/xmpp-addr/"
readme = "README.md"
keywords = ["xmpp", "jabber", "jid", "rfc7622", "rfc6120"]
documentation = "https://docs.rs/xmpp-addr"
categories = []

exclude = [
    "bitbucket-pipelines.yml",
]

[features]
default = ["stable", "serde"]

# Use only stable APIs (eg. don't build with TryFrom)
stable = []

[dependencies]
idna = "0.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
unicode-normalization = "0.1"
